--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 PORT = 5000
-MONGO_URI = "mongodb://localhost:27017/terpblog"
+# MONGO_URI = "mongodb://localhost:27017/terpblog"
+# MONGO_URI = "mongodb+srv://senewtech:admin@senew-cluster.rg6pb.mongodb.net/?retryWrites=true&w=majority&appName=senew-cluster"
+MONGO_URI = "mongodb+srv://senewtech:admin@senew-cluster.rg6pb.mongodb.net/terpblog"
 JWT_SECRET = LKJLF£"$>M>DSD
+
+# user = senewtech
+# pwd = admin
+# mongodb+srv://senewtech:admin@senew-cluster.rg6pb.mongodb.net/?retryWrites=true&w=majority&appName=senew-cluster
